momentum/css/style.css
/* ... */
.date {
  min-height: 28px;
  font-size: 24px;
  margin-bottom: 20px;
  transition: .3s;
}

.greeting-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: stretch;
  align-items: center;
  min-height: 48px;
  width: 100vw;
  font-size: 40px;
  transition: .3s;
}

.greeting {
  flex: 1;  
  padding: 10px;
  text-align: right;
}

.name {
  flex: 1;
  max-width: 50%;
  padding: 10px;
  font-size: 40px;
  text-align: left;
  color: #fff;
  background-color: transparent;
  border: 0;
  outline: 0;
}

.name::placeholder {
  color: #fff;
  opacity: .6;
}

/* Footer */

.footer {
  display: flex;
  /* flex-direction: column; */
  justify-content: space-between;
  align-items: flex-end;
  width: 100%;
  height: 30vh;
  min-height: 160px;  
  padding: 20px;
  gap: 30px;
}

.quote-wrapper {
  display: block;
  transition: .3s;
}

.change-quote {
  margin-bottom: 30px;
  background-image: url("../assets/svg/reload.svg");  
}

.quote {
  min-height: 32px;
}

.author {
  min-height: 20px;
}

.settings-wrapper {
  display: flex;
	gap: 20px;
	left: 20px;
	bottom: 20px;
	align-items: center;
  min-width: 140px;
}

.social-wrapper {
  display: flex;
	gap: 20px;
	right: 20px;
	bottom: 20px;
	align-items: center;
}

.social-wrapper img {
  display: block;
}

.settings-button {
  background-image: url("../assets/svg/settings.svg");
  background-position: center center;
  background-repeat: no-repeat;
  background-color: transparent;
  width: 30px;
  height: 30px;
  border: 0;
  opacity: 0.8;
  transition: all 0.3s ease;
}

.settings-button:hover {
	transform: rotate(90deg);
  opacity: 1;
}

/* Settings */

.settings-form {
	position: fixed;
	left: -300px;
	bottom: 80px;
	z-index: 3;
  transition: .3s;
}

.settings-open{
  left: 30px;
}

.settings-menu-shadow {
  position: fixed;
  z-index: 3;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, .3);
  left: 0;
  bottom: 0;
}

.settings-content {
	display: flex;
	flex-direction: column;
  padding: 20px;
  width: 270px;
	box-sizing: border-box;
	gap: 15px;
	background-color: #FFFFFF20;
	border-radius: 20px;
	transition: all 0.4s ease;
}

.settings-block {
	display: flex;
	white-space: nowrap;
  /* position: relative; */
	justify-content: space-between;
	align-items: flex-start;
	gap: 20px;
  font-size: 18px;
}

.settings-block p {
	user-select: none;
	line-height: 20px;
}

.setting-lang {
  padding-top: 7px;
}

.switch-background {
  cursor: pointer;
}

.set-theme-button {
  width: 20px;
  height: 20px;
  border-radius: 10px;
  border: 0;
  background: url("../assets/svg/set-theme.svg");
  background-size: 20px 20px;
  opacity: .8;
}

.set-theme-button:hover {
  opacity: 1;
}

.set-theme-button:active {
  border: 0;
  outline: 0;  
  transform: scale(1.3);
}

.switch-background-theme {
  border-radius: 100px;
  border: 0;
  padding: 0 10px;
  line-height: 20px;
}

/* label */

input[type="checkbox"] {
	height: 0;
	width: 0;
	visibility: hidden;
	position: absolute;
}

label {
	display: block;
  position: relative;
	cursor: pointer;
	text-indent: -100px;
	width: 40px;
	height: 20px;
	background: grey;
	border-radius: 100px;
	position: relative;
}

label::after {
	content: "";
	position: absolute;
	top: 5px;
	left: 5px;
	width: 10px;
	height: 10px;
	background: #0039A6;
	border-radius: 10px;
	transition: 0.3s;
	z-index: 1;
}

input:checked + label {
	background: #FFFFFF;
}

input + .toggle-lang {
	border-radius: 0;
  /* width: 30px; */
  height: 27px;
	background: url("../assets/svg/united-kingdom-flag-icon.svg");
}

input:checked + .toggle-lang {
	background: url("../assets/svg/russia-flag-icon.svg");
}

input:checked + label:after {
	left: calc(100% - 5px);
	transform: translateX(-100%);
}

label:active:after {
	width: 18px;
}

input + .toggle-lang::after {
	content: "";
	width: 100%;
	height: 100%;
	position: absolute;
	left: 0 !important;
	top: 0;
	opacity: 0.1;
  transform: none !important;
}

.setting-bg-container select {
	padding: 0 5px;
	height: 20px;
	border: 0;
	border-radius: 20px;
	box-sizing: border-box;
	outline: none;
}

.with-tag {
	margin-bottom: 34px;
}
.with-tag input {
	display: block;
}

.disable-block {
  display: none;
}

.hidden-block {
	opacity: 0;
	visibility: hidden;
	overflow: hidden;
  /* height: 0; */
  min-height: 0;
  padding: 0;
	margin: 0;
  font-size: 0;
	transform: scale(0, 0);
  transition: .3s;
}

@media (max-width: 768px) {

  .player,
  .weather {
		width: 140px;
		font-size: 12px;
    max-height: 260px;
	}

  .play-item {
    width: 140px;
  }

  .vol-controls {
    width: 140px;
  }
	.city {
		font-size: 18px;
		padding: 0;
    width: 140px;
	}

	.time {
		min-height: 80px;
		font-size: 70px;
	}

	.greeting-container {
		width: 100%;
		flex-direction: column;
		min-height: 40px;
		font-size: 22px;
	}

	.greeting {
		padding: 5px;
	}

  .quote-wrapper {
    position: absolute;
    padding-bottom: 40px;
    width: calc(100% - 40px);
  }
	.quote {
		margin-bottom: 20px;
	}

	.name {
		max-width: 100%;
		text-align: center;
		font-size: 22px;
		padding: 5px;
		box-sizing: border-box;
		align-self: stretch;
	}


  .player-icon:hover,
	.slider-icon:hover,
	.change-quote:hover {
		transform: none;
	}

	.social-container {
		right: 10px;
		bottom: 10px;
		gap: 10px;
	}

	.social-container img {
		width: 20px;
		height: 20px;
	}

  .wind,
	.humidity,
	.temperature {
		margin-top: 7.2px;
	}

	.wind span:first-child,
	.humidity span:first-child,
	.temperature span:first-child {
		font-size: 12px;
	}
}

@media (max-width: 390px) {

  .quote-wrapper {
    font-size: 14px;
  }

  .settings-wrapper,
  .social-wrapper {
    z-index: 10;
  }
}
/* ... */

